# cpp-sfml-opengl-boilerplate

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
cmake_modules/: download_FindSFML.sh
src/: main.cpp
